@@ -33,7 +33,8 @@
 #include "compat_util.hh"
 #include "gvcftools.hh"
 #include "parse_util.hh"
-#include "region_util.hh"
+#include "ref_util.hh"
+#include "RegionVcfRecordHandler.hh"
 #include "stringer.hh"
 #include "VcfHeaderHandler.hh"
 #include "VcfRecord.hh"
@@ -54,19 +55,15 @@ std::ostream& log_os(std::cerr);
 std::string cmdline;
 
 
-struct SetHapOptions {
+struct SetHapOptions : public RegionVcfOptions {
 
     SetHapOptions()
         : haploid_conflict_label("HAPLOID_CONFLICT")
         , orig_pl_tag("OPL")
-        , outfp(std::cout)
     {}
 
     const std::string haploid_conflict_label;
     const std::string orig_pl_tag;
-    std::ostream& outfp;
-
-    region_util::region_t regions;
 };
 
 
@@ -111,125 +108,31 @@ private:
 
 // process each vcf record for haploid setting:
 //
-struct SetHapVcfRecordHandler {
+struct SetHapVcfRecordHandler : public RegionVcfRecordHandler {
 
     SetHapVcfRecordHandler(const SetHapOptions& opt)
-        : _opt(opt)
+        : RegionVcfRecordHandler(opt)
+        , _shopt(opt)
     {}
 
-    void
-    process_line(const istream_line_splitter& vparse) {
-        const unsigned nw(vparse.n_word());
-
-        if(nw <= VCFID::SAMPLE) {
-            log_os << "ERROR: unexpected number of fields in vcf record:\n";
-            vparse.dump(log_os);
-            exit(EXIT_FAILURE);
-        }
-
-        // 1. check if record region is in a target region at all,
-        // if true an iterator provides begin,end ranges on
-        // successive calls for the record region.
-        //
-        if(! is_record_in_region(vparse)) {
-            vparse.write_line(_opt.outfp);
-            return;
-        }
-
-        VcfRecord vcfr(vparse);
-
-        bool is_haploid;
-        unsigned end;
-        while(get_next_record_region_interval(is_haploid,end)){
-            VcfRecord vcfr2(vcfr);
-            if(end>vcfr2.GetPos()) {
-                vcfr2.SetInfoVal("END",_intstr.get32(end));
-            } else {
-                vcfr2.DeleteInfoKeyVal("END");
-            }
-            if(is_haploid) make_record_haploid(vcfr2);
-            vcfr2.WriteUnaltered(_opt.outfp);
-            vcfr.SetPos(end+1);
-        } 
-        if(is_haploid) make_record_haploid(vcfr);
-        vcfr.WriteUnaltered(_opt.outfp);
-   }
-
 private:
-    bool
-    is_record_in_region(const istream_line_splitter& vparse) {
-        // determine if chromosome is new:
-        if(_last_chrom.empty() || (0 != strcmp(_last_chrom.c_str(),vparse.word[0]))) {
-            _last_chrom=vparse.word[0];
-            const region_util::region_t::const_iterator i(_opt.regions.find(_last_chrom));
-            _is_skip_chrom=((i==_opt.regions.end()) || (i->second.empty()));
 
-            // setup region iterators:
-            if(! _is_skip_chrom) {
-                _rhead=i->second.begin();
-                _rend=i->second.end();
-            }
-        }
+    void
+    process_block(const bool is_in_region,
+                  const unsigned end,
+                  VcfRecord& vcfr) const {
 
-        if(! _is_skip_chrom) {
-            // get start pos:
-            const char* posstr(vparse.word[1]);
-            _begin_pos=(parse_unsigned(posstr));
-
-            // get end pos:
-            static const char* endkey = "END=";
-            static const unsigned endsize = strlen(endkey);
-            const char* endstr(strstr(vparse.word[VCFID::INFO],"END="));
-            if(NULL==endstr) {
-                _end_pos = _begin_pos;
-            } else {
-                endstr+=endsize;
-                _end_pos=parse_unsigned(endstr);
-            }
-
-            while(_rhead != _rend) {
-                if(_begin_pos>_rhead->second) {
-                    _rhead++;
-                } else {
-                    return(_end_pos>_rhead->first);
-                }
-            }
-            _is_skip_chrom=true;
-        }
-        return false;
-    }
-
-    // if is_record_in_region is true, call this function to get intercepting intervals
-    // returns false when no more intervals exist
-    bool
-    get_next_record_region_interval(bool& is_haploid,
-                                    unsigned& end) {
-
-        assert(_begin_pos <= _end_pos);
-
-        if(_begin_pos > _rhead->second) _rhead++;
-        if(_rhead == _rend) { // no haploid regions left
-            is_haploid = false;
-            end = _end_pos;
-            return false;
-        }
-
-        // our next interval:
-        if(_begin_pos <= _rhead->first) {
-            end = std::min( _end_pos,_rhead->first);
+        if(end>vcfr.GetPos()) {
+            vcfr.SetInfoVal("END",_intstr.get32(end));
         } else {
-            end = std::min( _end_pos, _rhead->second);
+            vcfr.DeleteInfoKeyVal("END");
         }
-
-        // test for intercept:
-        is_haploid = ((_begin_pos <= _rhead->second) && (end > _rhead->first));
-        
-        _begin_pos = end+1;
-        return (_begin_pos<=_end_pos);
+        if(is_in_region) make_record_haploid(vcfr);
+        vcfr.WriteUnaltered(_opt.outfp);
     }
 
     void
-    make_record_haploid(VcfRecord& vcfr) {
+    make_record_haploid(VcfRecord& vcfr) const {
         const char* gt(vcfr.GetSampleVal("GT"));
         if(NULL == gt)  return;
         parse_gt(gt,_gti);
@@ -247,24 +150,17 @@ private:
                 // move PL field to 'backup' OPL field:
                 const char* pl(vcfr.GetSampleVal("PL"));
                 if(NULL != pl) {
-                    vcfr.SetSampleVal(_opt.orig_pl_tag.c_str(),pl);
+                    vcfr.SetSampleVal(_shopt.orig_pl_tag.c_str(),pl);
                     vcfr.DeleteSampleKeyVal("PL");
                 }
             } else {
-                vcfr.AppendFilter(_opt.haploid_conflict_label.c_str());
+                vcfr.AppendFilter(_shopt.haploid_conflict_label.c_str());
             }
         }
     }
 
-
-    const SetHapOptions& _opt;
-    std::string _last_chrom;
-    bool _is_skip_chrom; // true when pos is past all regions in current chrom
-    region_util::interval_group_t::const_iterator _rhead,_rend;
-
-    unsigned _begin_pos,_end_pos; // used to provide the region intercept iterator
-
-    std::vector<int> _gti; // cache gt parse
+    const SetHapOptions& _shopt;
+    mutable std::vector<int> _gti; // cache gt parse
     stringer<int> _intstr; // fast int->str util
 };
 
@@ -317,7 +213,8 @@ try_main(int argc,char* argv[]){
     namespace po = boost::program_options;
     po::options_description req("configuration");
     req.add_options()
-        ("region-file",po::value<std::string>(&region_file),"A bed file specifying the regions to be converted (required)");
+        ("region-file",po::value<std::string>(&region_file),"A bed file specifying the regions to be converted (required)")
+        ("ref", po::value<std::string >(&opt.ref_seq_file),"samtools reference sequence (required)");
 
     po::options_description help("help");
     help.add_options()
@@ -346,6 +243,11 @@ try_main(int argc,char* argv[]){
 
     if(region_file.empty()) {
         log_os << "ERROR: no region file specified\n";
+        exit(EXIT_FAILURE);
+    }
+
+    if(opt.ref_seq_file.empty()) {
+        log_os << "ERROR: no reference file specified\n";
         exit(EXIT_FAILURE);
     }
 
